gcc/testsuite/gdc.test/fail_compilation/fail3290.d
// 3290

void main()
{
    const(int)[] array;
    foreach (ref int i; array) {
        //i = 42;
    }
}
